[tool.poetry]
name = "saas-mvp-backend"
version = "0.1.0"
description = "MVP of a cohort analysis app"
authors = ["alvropena <me@alvropena.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
flake8 = "^7.0.0"
pylint = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
